[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/UI/Nodes/TransparentChecker.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Shaders/TransparentChecker.gdshader" type="Shader" id=2]
[ext_resource path="res://src/UI/Canvas/CameraMovement.gd" type="Script" id=3]
[ext_resource path="res://src/UI/CanvasPreviewContainer/CanvasPreviewContainer.gd" type="Script" id=4]
[ext_resource path="res://src/UI/Canvas/CanvasPreview.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/graphics/timeline/play.png" type="Texture2D" id=6]
[ext_resource path="res://src/UI/Nodes/CollapsibleContainer.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/UI/Nodes/ValueSlider.gd" type="Script" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/size = 10.0
shader_param/alpha = 1.0
shader_param/color1 = Color( 0.7, 0.7, 0.7, 1 )
shader_param/color2 = Color( 1, 1, 1, 1 )
shader_param/offset = Vector2( 0, 0 )
shader_param/scale = Vector2( 0, 0 )
shader_param/size = Vector2( 0, 0 )
shader_param/follow_movement = false
shader_param/follow_scale = false

[node name="CanvasPreviewContainer" type="PanelContainer"]
offset_right = 328.0
offset_bottom = 174.0
custom_minimum_size = Vector2( 0, 110 )
script = ExtResource( 4 )

[node name="VBox" type="VBoxContainer" parent="."]
offset_left = 7.0
offset_top = 7.0
offset_right = 321.0
offset_bottom = 167.0

[node name="HBox" type="HBoxContainer" parent="VBox"]
offset_right = 314.0
offset_bottom = 136.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBox/HBox"]
offset_right = 16.0
offset_bottom = 136.0

[node name="Label" type="Label" parent="VBox/HBox/VBoxContainer"]
offset_left = 4.0
offset_right = 12.0
offset_bottom = 14.0
size_flags_horizontal = 4
text = "+"
align = 1

[node name="PreviewZoomSlider" type="VSlider" parent="VBox/HBox/VBoxContainer"]
offset_top = 18.0
offset_right = 16.0
offset_bottom = 118.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 3
step = 0.01

[node name="Label2" type="Label" parent="VBox/HBox/VBoxContainer"]
offset_left = 5.0
offset_top = 122.0
offset_right = 10.0
offset_bottom = 136.0
size_flags_horizontal = 4
text = "-"
align = 1

[node name="PreviewViewportContainer" type="SubViewportContainer" parent="VBox/HBox"]
offset_left = 20.0
offset_right = 314.0
offset_bottom = 136.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBox/HBox/PreviewViewportContainer"]
size = Vector2( 294, 136 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="TransparentChecker" parent="VBox/HBox/PreviewViewportContainer/SubViewport" instance=ExtResource( 1 )]
material = SubResource( 1 )

[node name="CanvasPreview" parent="VBox/HBox/PreviewViewportContainer/SubViewport" instance=ExtResource( 5 )]
unique_name_in_owner = true

[node name="CameraPreview" type="Camera2D" parent="VBox/HBox/PreviewViewportContainer/SubViewport"]
unique_name_in_owner = true
offset = Vector2( 32, 32 )
current = true
zoom = Vector2( 0.15, 0.15 )
script = ExtResource( 3 )
index = 2

[node name="Animation" type="HBoxContainer" parent="VBox"]
offset_top = 140.0
offset_right = 314.0
offset_bottom = 160.0

[node name="PlayButton" type="Button" parent="VBox/Animation" groups=["UIButtons"]]
unique_name_in_owner = true
offset_right = 20.0
offset_bottom = 20.0
custom_minimum_size = Vector2( 20, 0 )
mouse_default_cursor_shape = 2
size_flags_vertical = 0
toggle_mode = true

[node name="TextureRect" type="TextureRect" parent="VBox/Animation/PlayButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.5
offset_top = -6.0
offset_right = 3.5
offset_bottom = 6.0
mouse_default_cursor_shape = 2
texture = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBox/Animation"]
offset_left = 24.0
offset_right = 314.0
offset_bottom = 20.0
size_flags_horizontal = 3

[node name="Mode" type="HBoxContainer" parent="VBox/Animation/VBoxContainer"]
offset_right = 290.0
offset_bottom = 20.0

[node name="Label" type="Label" parent="VBox/Animation/VBoxContainer/Mode"]
offset_top = 3.0
offset_right = 111.0
offset_bottom = 17.0
text = "Animation mode:"

[node name="OptionButton" type="OptionButton" parent="VBox/Animation/VBoxContainer/Mode"]
offset_left = 115.0
offset_right = 290.0
offset_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "All frames"
clip_text = true
align = 1
items = [ "All frames", null, false, 0, null, "Current frame as spritesheet", null, false, 1, null ]
selected = 0

[node name="Options" parent="VBox/Animation/VBoxContainer" instance=ExtResource( 7 )]
visible = false
offset_top = 24.0
offset_right = 290.0
offset_bottom = 44.0
text = "Spritesheet options"

[node name="GridContainer" type="GridContainer" parent="VBox/Animation/VBoxContainer/Options"]
visible = false
offset_right = 290.0
offset_bottom = 52.0
columns = 2

[node name="HFrames" type="TextureProgressBar" parent="VBox/Animation/VBoxContainer/Options/GridContainer"]
offset_right = 6.0
offset_bottom = 6.0
custom_minimum_size = Vector2( 0, 24 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme_type_variation = "ValueSlider"
min_value = 1.0
value = 1.0
allow_greater = true
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
script = ExtResource( 8 )
prefix = "Horizontal frames:"

[node name="VFrames" type="TextureProgressBar" parent="VBox/Animation/VBoxContainer/Options/GridContainer"]
offset_right = 6.0
offset_bottom = 6.0
custom_minimum_size = Vector2( 0, 24 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme_type_variation = "ValueSlider"
min_value = 1.0
value = 1.0
allow_greater = true
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
script = ExtResource( 8 )
prefix = "Vertical frames:"

[node name="StartFrame" type="TextureProgressBar" parent="VBox/Animation/VBoxContainer/Options/GridContainer"]
unique_name_in_owner = true
offset_right = 6.0
offset_bottom = 6.0
custom_minimum_size = Vector2( 0, 24 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme_type_variation = "ValueSlider"
min_value = 1.0
max_value = 1.0
value = 1.0
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
script = ExtResource( 8 )
prefix = "Start frame:"

[node name="EndFrame" type="TextureProgressBar" parent="VBox/Animation/VBoxContainer/Options/GridContainer"]
unique_name_in_owner = true
offset_right = 6.0
offset_bottom = 6.0
custom_minimum_size = Vector2( 0, 24 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme_type_variation = "ValueSlider"
min_value = 1.0
max_value = 1.0
value = 1.0
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
script = ExtResource( 8 )
prefix = "End frame:"

[connection signal="value_changed" from="VBox/HBox/VBoxContainer/PreviewZoomSlider" to="." method="_on_PreviewZoomSlider_value_changed"]
[connection signal="mouse_entered" from="VBox/HBox/PreviewViewportContainer" to="." method="_on_PreviewViewportContainer_mouse_entered"]
[connection signal="mouse_exited" from="VBox/HBox/PreviewViewportContainer" to="." method="_on_PreviewViewportContainer_mouse_exited"]
[connection signal="toggled" from="VBox/Animation/PlayButton" to="." method="_on_PlayButton_toggled"]
[connection signal="item_selected" from="VBox/Animation/VBoxContainer/Mode/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="VBox/Animation/VBoxContainer/Options/GridContainer/HFrames" to="." method="_on_HFrames_value_changed"]
[connection signal="value_changed" from="VBox/Animation/VBoxContainer/Options/GridContainer/VFrames" to="." method="_on_VFrames_value_changed"]
[connection signal="value_changed" from="VBox/Animation/VBoxContainer/Options/GridContainer/StartFrame" to="." method="_on_StartFrame_value_changed"]
[connection signal="value_changed" from="VBox/Animation/VBoxContainer/Options/GridContainer/EndFrame" to="." method="_on_EndFrame_value_changed"]
